--- a/style.css
+++ b/style.css
@@ -129,12 +129,12 @@ display: none;
 }
 
 .mobile-nav {
-  width: 100%;
+  width: 100vw;
   height: auto;
   background: #000000;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -8%;
   transform: translateY(-100%);
   z-index: 10;
   transition: transform 0.2s ease;
@@ -153,7 +153,7 @@ display: none;
 
 .mobile-nav.active {
   transform: translateY(0);
-  top: 0.8%;
+  top: 100%;
 }
 
 .mobile-nav h3 {
@@ -177,7 +177,7 @@ display: none;
 }
 
 .nav-bar {
-  padding: 26px;
+  padding: 24px;
   width: 100%;
   position: sticky;
   top: 0;
@@ -200,6 +200,45 @@ display: none;
   display: flex;
   gap: 24px;
 }
+
+.nav-links h3{
+  overflow: hidden;
+  position: relative;
+  padding: 2px;
+
+}
+
+.nav-links h3::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  top: 50%;
+  left: -100%;
+  position: absolute;
+  background: #dcdcdc;
+  transition: left 0.3s ease; /* Smooth transition */
+}
+
+
+.nav-links h3:hover::after {
+  left: 0; /* Move the line into view */
+}
+.nav-links h3::before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  top: 50%;
+  left: 100%;
+  position: absolute;
+  background: #dcdcdc;
+  transition: left 0.3s ease; /* Smooth transition */
+}
+
+
+.nav-links h3:hover::before {
+  left: 0; /* Move the line into view */
+}
+
 
 .hero {
   display: grid;
@@ -703,7 +742,6 @@ display: none;
   .nav-bar {
     padding: 26px;
     width: 100%;
-    overflow: hidden;
     height: 70px;
   }
   .nav {
@@ -1021,7 +1059,7 @@ display: none;
   flex-direction: column;
   grid-template-columns: 1fr 1fr;
   width: 100%;
-  padding: 0 100px;
+  padding: 0 40px;
   align-items: center;
   justify-items: center;
   overflow: hidden;
