--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -1,57 +1,138 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html , body{
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
 .mobile-nav.active {
-    top: 100%;
+  top: 100%;
 }
 
-.contact-hero{
+.contact-hero {
+  background: rgb(0, 0, 0);
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+}
+.contact-footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-section {
+  background: #ffffff;
+  width: 680px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  padding-bottom: 80px;
+  gap: 30px;
+}
+
+.footer-left {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 100%;
+}
+
+.footer-left h4,
+.footer-left h5 {
+  color: #000;
+}
+
+.footer-contactus-elem {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  text-transform: capitalize;
+  justify-content: start;
+  padding: 5px;
+  border-bottom: 1.5px solid #000000;
+  transition: all 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.bottom-nav {
+  background: rgb(0, 0, 0);
+  padding: 50px 40px;
+  border-top: 2px solid #ffffff;
+  margin: 0;
+  width: 100%;
+}
+.bottom-nav .nav {
+  justify-content: end;
+}
+
+@media (max-width: 768px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html,
+  body {
+    height: 100%;
+    width: 100%;
+  }
+  .text-lg-180 {
+    font-size: 56px;
+  }
+
+  .contact-hero {
     background: rgb(0, 0, 0);
     display: flex;
+    padding: 100px 0 0;
     width: 100%;
     flex-direction: column;
     gap: 50px;
     align-items: center;
-}
-.contact-footer{
+  }
+  .contact-footer {
     width: 100%;
     display: flex;
+    padding: 0 20px;
     flex-direction: column;
     align-items: center;
-
-}
-.footer-section{
+  }
+  .footer-section {
     background: #ffffff;
-        width: 680px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 40px;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
     gap: 30px;
-}
+  }
 
-.footer-left{
+  .footer-left {
     display: flex;
     flex-direction: column;
     gap: 40px;
     width: 100%;
-}
+  }
 
-.footer-left h4, 
-.footer-left h5{
+  .footer-left h4,
+  .footer-left h5 {
     color: #000;
-}
+  }
 
+  .footer-left-head {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+  }
 
-.footer-contactus-elem {
+  .footer-contactus-elem {
     display: flex;
     gap: 24px;
     align-items: center;
@@ -62,106 +143,20 @@ html , body{
     transition: all 0.8s cubic-bezier(0.19, 1, 0.22, 1);
   }
 
-  .bottom-nav{
+  .footer-social-links {
+    gap: 20px;
+    width: 100%;
+    align-items: end;
+  }
+
+  .bottom-nav {
     background: rgb(0, 0, 0);
     padding: 50px 40px;
-    border-top: 2px solid #ffffff;
+    border-top: 2px solid #ffadad;
     margin: 0;
     width: 100%;
   }
-  .bottom-nav .nav{
+  .bottom-nav .nav {
     justify-content: end;
   }
-
-
-  @media (max-width: 768px) {
-   
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    html , body{
-        height: 100%;
-        width: 100%;
-    }
-    .text-lg-180{
-        font-size: 56px;
-    }
-    
-    .contact-hero{
-        background: rgb(0, 0, 0);
-        display: flex;
-        padding: 100px 0 0;
-        width: 100%;
-        flex-direction: column;
-        gap: 50px;
-        align-items: center;
-    }
-    .contact-footer{
-        width: 100%;
-        display: flex;
-        padding: 0 20px;
-        flex-direction: column;
-        align-items: center;
-    
-    }
-    .footer-section{
-        background: #ffffff;
-            width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 40px ;
-        padding-bottom: 60px;
-        gap: 30px;
-    }
-    
-    .footer-left{
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
-        width: 100%;
-    }
-    
-    .footer-left h4, 
-    .footer-left h5{
-        color: #000;
-    }
-    
-    .footer-left-head{
-        width: 100%;
-        display: flex;
-        justify-content: end;
-    }
-    
-    .footer-contactus-elem {
-        display: flex;
-        gap: 24px;
-        align-items: center;
-        text-transform: capitalize;
-        justify-content: start;
-        padding: 5px;
-        border-bottom: 1.5px solid #000000;
-        transition: all 0.8s cubic-bezier(0.19, 1, 0.22, 1);
-      }
-
-      .footer-social-links{
-        gap: 20px;
-        width: 100%;
-        align-items: end;
-      }
-    
-      .bottom-nav{
-        background: rgb(0, 0, 0);
-        padding: 50px 40px;
-        border-top: 2px solid #ffadad;
-        margin: 0;
-        width: 100%;
-      }
-      .bottom-nav .nav{
-        justify-content: end;
-      }
-
-    
-  }
+}
