--- a/pages/works/work.css
+++ b/pages/works/work.css
@@ -1,11 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html , body{
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
 .mobile-nav.active {
@@ -13,144 +14,137 @@ html , body{
   top: 100%;
 }
 
-
 .work-hero {
+  width: 100%;
+  position: relative;
+}
+
+.work-hero-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 110px 0;
+}
+
+.work-hero-container h1 {
+  color: #ffffff;
+}
+
+.all-works-section {
+  padding: 100px 0;
+  /* display: ; */
+}
+
+.work-show {
+  position: relative;
+  padding: 100px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid white;
+}
+
+.work-image {
+  position: absolute;
+  height: 526px;
+  width: 446px;
+  left: 30%;
+  scale: 0;
+  opacity: 0;
+  rotate: -50deg;
+}
+
+.work-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.bottom-nav nav {
+  width: 100%;
+  justify-content: end;
+}
+
+@media (max-width: 700px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html,
+  body {
+    height: 100%;
+    width: 100%;
+  }
+
+  .work-hero {
     width: 100%;
     position: relative;
   }
-  
+
   .work-hero-container {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 110px 0;
+    padding: 0;
   }
-  
+
   .work-hero-container h1 {
     color: #ffffff;
   }
-  
 
+  .text-xl-580 {
+    font-size: 180px;
+    letter-spacing: -0.6rem;
+    line-height: 1;
+  }
 
-  .all-works-section{
-    padding: 100px 0;
+  .text-md-96 {
+    font-size: 56px;
+    letter-spacing: -0.12rem;
+    line-height: 1;
+  }
+
+  .all-works-section {
+    padding: 50px 0;
     /* display: ; */
   }
-  
-  .work-show{
+
+  .work-show {
     position: relative;
-    padding: 100px 40px;
+    padding: 33px 20px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: start;
+    gap: 50px;
     justify-content: space-between;
     border-bottom: 2px solid white;
   }
 
-  .work-image{
-    position: absolute;
-    height: 526px;
-    width: 446px;
-    left: 30%;
-    scale: 0;
-    opacity: 0;
-    rotate: -50deg;
+  .work-details {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-  
-  .work-image img{
+  .work-image {
+    display: none;
+  }
+
+  .work-image img {
     height: 100%;
     width: 100%;
     object-fit: cover;
   }
 
-  .bottom-nav nav{
+  .bottom-nav nav {
     width: 100%;
     justify-content: end;
   }
 
-  @media (max-width: 700px) {
-
-    *{
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+  .footer-section {
+    padding: 100px 20px;
   }
-  html , body{
-      height: 100%;
-      width: 100%;
-  }
-  
-  
-  .work-hero {
-      width: 100%;
-      position: relative;
-    }
-    
-    .work-hero-container {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0;
-    }
-    
-    .work-hero-container h1 {
-      color: #ffffff;
-    }
-    
-    .text-xl-580{
-      font-size: 180px;
-      letter-spacing: -0.6rem;
-      line-height: 1;
-    }
-    
-    .text-md-96{
-      font-size: 56px;
-      letter-spacing: -0.12rem;
-      line-height: 1;
-      
-    }
-  
-  
-    .all-works-section{
-      padding: 50px 0;
-      /* display: ; */
-    }
-    
-    .work-show{
-      position: relative;
-      padding: 33px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: start;
-      gap: 50px;
-      justify-content: space-between;
-      border-bottom: 2px solid white;
-    }
-  
-    .work-details{
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .work-image{
-      display: none;
-    }
-    
-    .work-image img{
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-    }
-  
-    .bottom-nav nav{
-      width: 100%;
-      justify-content: end;
-    } 
-    
-
-    .footer-section{
-      padding: 100px 20px;
-    }
-  }
+}
