--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -25,6 +25,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
   align-items: center;
 }
 .footer-section {
@@ -70,6 +71,40 @@ body {
 }
 .bottom-nav .nav {
   justify-content: end;
+}
+
+.contact-drag-ball{
+  position: absolute;
+  background: #000;
+  border-radius: 50%;
+}
+.contact-drag-ball{
+  position: absolute;
+  background: #000;
+  border-radius: 50%;
+}
+
+.contact-drag-ball {
+  height: 120px;
+  width: 120px;
+  border: 2px solid white;
+}
+.contact-drag-ball img{
+  height: 100%;
+  width: 100%;
+}
+
+.drag-ball-globe{
+  top: -0.5%;
+  left: 22%;
+}
+.drag-ball-smiley{
+  top: 30%;
+  left: 15%;
+}
+.drag-ball-star{
+  bottom: 40%;
+  right: 20%;
 }
 
 @media (max-width: 768px) {
